<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/timer_background">

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/timer_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/timerDigits"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textTimer"
        tools:layout_editor_absoluteX="1dp">

        <FrameLayout
            style="@style/timerDigitsFrame"
            android:background="@drawable/timer_digit_frame_bg">

            <TextView
                android:id="@+id/timerDays1"
                style="@style/timerDigitsText"
                android:text="@string/timer_zero" />
        </FrameLayout>

        <FrameLayout
            style="@style/timerDigitsFrame"
            android:background="@drawable/timer_digit_frame_bg">

            <TextView
                android:id="@+id/timerDays2"
                style="@style/timerDigitsText"
                android:text="@string/timer_zero" />
        </FrameLayout>

        <FrameLayout style="@style/timerColonFrame">

            <TextView
                style="@style/timerDigitsColon"
                android:text="@string/timer_colon" />
        </FrameLayout>

        <FrameLayout
            style="@style/timerDigitsFrame"
            android:background="@drawable/timer_digit_frame_bg">

            <TextView
                android:id="@+id/timerHours1"
                style="@style/timerDigitsText"
                android:text="@string/timer_zero" />
        </FrameLayout>


        <FrameLayout
            style="@style/timerDigitsFrame"
            android:background="@drawable/timer_digit_frame_bg">

            <TextView
                android:id="@+id/timerHours2"
                style="@style/timerDigitsText"
                android:text="@string/timer_zero" />
        </FrameLayout>

        <FrameLayout style="@style/timerColonFrame">

            <TextView
                style="@style/timerDigitsColon"
                android:text="@string/timer_colon" />
        </FrameLayout>

        <FrameLayout
            style="@style/timerDigitsFrame"
            android:background="@drawable/timer_digit_frame_bg">

            <TextView
                android:id="@+id/timerMinutes1"
                style="@style/timerDigitsText"
                android:text="@string/timer_zero" />
        </FrameLayout>

        <FrameLayout
            style="@style/timerDigitsFrame"
            android:background="@drawable/timer_digit_frame_bg">

            <TextView
                android:id="@+id/timerMinutes2"
                style="@style/timerDigitsText"
                android:text="@string/timer_zero" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtTimerDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/timer_days"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/timerDigits"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtTimerHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:text="@string/timer_hours"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/timerDigits"
        app:layout_constraintStart_toEndOf="@id/txtTimerDays"/>

    <TextView
        android:id="@+id/txtTimerMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/timer_minutes"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/timerDigits"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>